# cugl

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  run.sh
examples/triangle/: CMakeLists.txt  main.c
include/cugl/: cugl.h
scripts/: gen_gl.py
src/: core.c  cugl.c  cugl_core.h  enum_info.c  internal.h  shader_interface.cpp  shader_interface.h  util.c  vulkan_helpers.c
